Bug 512381 - Icons dont stay put after reboot/ relog in
Summary: Icons dont stay put after reboot/ relog in
Status: VERIFIED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.5.3
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 512488 512720 512845 513052 (view as bug list)
Depends on:
Blocks: 503500
  Show dependency treegraph
 
Reported: 2025-11-20 11:31 UTC by Mike Linus
Modified: 2025-12-12 23:08 UTC (History)
21 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Linus 2025-11-20 11:31:48 UTC
SUMMARY
So far everything seems fine, however the icons no longer stay put, i put them on the desktop at certain locations. But after a reboot or a logout and re login, they return to their default positions and on the wrong monitor

I have 3 monitors.
from left to right [1 : Small] [2 : wide screen] [3: wide screen]
number 2 is my main monitor, 

the icons always goes back to monitor 1 (which is the monitor i used just for watching crap on youtube)


STEPS TO REPRODUCE
1. just put a few icons on the multi-monitor environment
2. position the icons
3. log out, log back in

OBSERVED RESULT
the return back to monitor one in an organised fashion

EXPECTED RESULT
to log in and they stay on the desktop monitor and in position

SOFTWARE/OS VERSIONS
Windows:  <lol not anymore> FEDORA 43
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora 43
KDE Plasma Version: 6.5.3
KDE Frameworks Version:  6.20.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
Comment 1 Mike Linus 2025-11-20 11:34:48 UTC
forgot to mention the desktop view is in Folder view mode
Comment 2 Hyrules 2025-11-20 12:13:59 UTC
I'm having the same issue with Endeavour OS arch linux. My setup is similar I have 3 monitor and the center one is my primary desktop. When I logoff or reboot the icons get pushed to the monitor on the right in my case. This was not present before the update to 6.3.5.

OS: EndeavourOS x86_64
Host: MS-7D69 (1.0)
Kernel: Linux 6.17.8-arch1-1
Uptime: 19 mins
Packages: 1525 (pacman)
Shell: bash 5.3.3
Display (MSI3DD2): 3840x2160 @ 1.25x in 32", 240 Hz [External] *
Display (ROG XG27UQ): 3840x2160 @ 1.25x in 27", 144 Hz [External]
Display (DENON-AVR): 3840x2160 @ 1.25x in 32", 120 Hz [External]
DE: KDE Plasma 6.5.3
WM: KWin (Wayland)
WM Theme: Breeze
Theme: Breeze (Dark) [Qt], Breeze-Dark [GTK2], Breeze [GTK3]
Icons: breeze-dark [Qt], breeze-dark [GTK2/3/4]
Font: Noto Sans (10pt) [Qt], Noto Sans (10pt) [GTK2/3/4]
Cursor: breeze (24px)
Terminal: konsole 25.8.3
Terminal Font: Hack (11pt)
CPU: AMD Ryzen 7 9800X3D (16) @ 5.27 GHz
GPU: NVIDIA GeForce RTX 4090 [Discrete]
Memory: 9.53 GiB / 62.40 GiB (15%)
Swap: 10.50 MiB / 8.80 GiB (0%)
Disk (/): 341.40 GiB / 1.78 TiB (19%) - ext4
Comment 3 confimnot 2025-11-22 16:48:14 UTC
I have the same problem but, when i tried to arrange them on the second monitor it then rebooted the icons stayed in the same place.
Comment 4 Mike Linus 2025-11-22 16:51:44 UTC
to be honest, the issue for me is (was) that it was happening on ALL monitors, i sort of solved it (i think) by simply using both the other monitors as (desktop) and the main monitor (2nd one) as my folder view they SEEM to be staying put at the moment. 
I'll keep the thread open though just incase its an actual bug that needed to be addressed.
Comment 5 kmdest 2025-11-23 00:58:57 UTC
*** Bug 512488 has been marked as a duplicate of this bug. ***
Comment 6 Andrzej 2025-11-23 01:02:21 UTC
Plasmashell's desktop icon positions reset every time I log in. I created a new user to try and rule out settings faults, and it happens to that user too. I have standard monitor setup (side by side, 3440x1440 + 1920x1080)

STEPS TO REPRODUCE
1. Log out
2. Log in

OBSERVED RESULT
Desktop icons not at their saved positions, instead resetting to my second non-primary monitor, filling from the top-left like words in a book

EXPECTED RESULT
Saved positions are retained after login/logout.
Comment 7 Jesse 2025-11-23 22:14:07 UTC
Currently having the same/similar issue on CachyOS. Upon rebooting the DE, my desktop icons organized on my main screen all get placed on my secondary monitor to my left.  Let me know if I should provide more information
Comment 8 Pascal COMBES 2025-11-25 20:03:52 UTC
Hello, I have the same issue on openSUSE Tumbleweed 

*Software*
Kernel version: Linux PCombes4.home 6.17.8-2-default #1 SMP PREEMPT_DYNAMIC Thu Nov 20 15:10:21 UTC 2025 (5d803de) x86_64 x86_64 x86_64 GNU/Linux
openSUSE Tumbleweed version: 20251124
Plasma version: 6.5.3 (Wayland)
KDE Frameworks : 6.20.0
Qt : 6.10.0

*Hardware*
PC: Dell Vostro 15 7510
Processor: 11th Gen Intel® Core™ i7-11800H @ 2.30GHz
Discrete GPU: NVIDIA GeForce RTX 3050 Ti (not in use)
Embeeded screen: 1920x1080
HDMI screen: Acer Technologies S271HL1920x1080 (above previous one)

I have seen the following possible duplicates:
  - https://bugs.kde.org/show_bug.cgi?id=512583
  - https://bugs.kde.org/show_bug.cgi?id=512596

I have also seen that there has been recent modifications in the icon positioning code in Plasma especially https://invent.kde.org/plasma/plasma-desktop/-/commit/17cbe05c2d488ff4b8f1d759eed1037f4b97fcd9 and https://invent.kde.org/plasma/plasma-desktop/-/commit/d5969ddc4c4560759b60660c132859dd6bb97345 (by probability order).

Please let me know if you need any additional detail.
Comment 9 Błażej Szczygieł 2025-11-25 20:09:12 UTC
Most likely caused by the fix for bug: https://bugs.kde.org/show_bug.cgi?id=511131

Looks like Plasma puts icons for wrong containment and wipes icon layout config.

---

> I have also seen that there has been recent modifications in the icon positioning code in Plasma especially

These commit are fixing unrelated issue and are scheduled for 6.6.0 release (the are not in 6.5.3). There are more commits in queue to fix icon positioning!
Comment 10 rex 2025-11-26 13:29:25 UTC
Yes have the exact same problem since some update back. Is this to be fixed in a release soon? 
Thanks for confirming.
Comment 11 Andrew 2025-11-26 13:40:25 UTC
I have two monitors:

Left (main) - nvidia
Right (second) - intel hd.

After reboot all desktop icons move to right monitor (It seems they move to default position).
Icons have this behavior since 6.5.3 update.
Comment 12 Bug Janitor Service 2025-11-27 00:07:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3340
Comment 13 Erik 2025-11-27 13:07:59 UTC
Same issue on cachyos here with a AMDGPU
Every time i reboot all the desktop icons loose their position and go my second monitor

I've tried to delete ~/.config/plasma-org.kde.plasma.desktop-appletsrc
but it didn't work
 
Kernel: Linux 6.17.9-2-cachyos
Display (2270W): 1920x1080 in 22", 60 Hz [External]
Display (24G2E1): 1920x1080 in 24", 100 Hz [External] *
DE: KDE Plasma 6.5.3
WM: KWin (Wayland)
WM Theme: Breeze
Theme: Breeze (Dark) [Qt], Breeze-Dark [GTK2], Breeze [GTK3]
Icons: breeze-dark [Qt], breeze-dark [GTK2/3/4]
Font: Noto Sans (10pt) [Qt], Noto Sans (10pt) [GTK2/3/4]
Cursor: Breeze_Light (24px)
Terminal: konsole 25.8.3
CPU: AMD Ryzen 5 5500 (12) @ 4.36 GHz
GPU: AMD Radeon RX 7600 [Discrete]
Comment 14 Błażej Szczygieł 2025-11-27 15:06:31 UTC
Could you test https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3340 ?
Comment 15 kmdest 2025-11-29 19:48:39 UTC
*** Bug 512720 has been marked as a duplicate of this bug. ***
Comment 16 Aseef 2025-11-30 18:03:14 UTC
Same issue on Fedora KDE.

*Software*
Kernel version:6.17.8-300.fc43.x86_64
openSUSE Tumbleweed version: ?
Plasma version: 6.5.3 (Wayland)
KDE Frameworks : 6.20.0
Qt : 6.10.1

*Hardware*
PC: Asus Zephyrus G16
Processor: AMD Ryzen AI 9 370
Discrete GPU: NVIDIA GeForce 4060
Embeeded screen: 2560x1600
HDMI screen: Sansui 2560x1440 gaming monitor

Using only embedded screen, icon order works if I disable external monitor.
Comment 17 frontlemon 2025-11-30 21:33:26 UTC
Hello, facing the same problem here.
I locked my icons in folder view on my main monitor and they seem to work at the moment.

Operating System: Arch Linux 
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Kernel Version: 6.17.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 8 GiB of RAM (7.5 GiB usable)
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: Dell Inc.
Product Name: Inspiron 5379
Comment 18 David Redondo 2025-12-02 10:37:10 UTC
*** Bug 512845 has been marked as a duplicate of this bug. ***
Comment 19 Akseli Lahtinen 2025-12-02 15:58:26 UTC
Git commit c503531a9ceb2ae6af2cd6fca4c50c371ede0ffb by Akseli Lahtinen, on behalf of Błażej Szczygieł.
Committed on 02/12/2025 at 15:09.
Pushed by akselmo into branch 'master'.

ScreenMapper: fix icon placement on multiple containments

Move icons to disabled screens when screen doesn't exist. The screen
is most likely not yet initialized when Plasma is loading, so do the
same logic as when removing screen to preserve icon layout.

Change screen mapping when swapping screens.

Remove consistency map, because it disallows to place all icons on
screen with number different than 0.

M  +9    -2    containments/desktop/plugins/folder/foldermodel.cpp
M  +6    -1    containments/desktop/plugins/folder/foldermodel.h
M  +61   -11   containments/desktop/plugins/folder/screenmapper.cpp
M  +8    -0    containments/desktop/plugins/folder/screenmapper.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/c503531a9ceb2ae6af2cd6fca4c50c371ede0ffb
Comment 20 Pascal COMBES 2025-12-02 21:06:56 UTC
(In reply to Błażej Szczygieł from comment #14)
> Could you test
> https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3340 ?

I tested this PR and the proposed patch seems to work, with a small glitch: First the icon appear in the bad position and after one or two tenths of second, they go in the right position.
To test, I used the following procedure: I forked the official Plasma package, I corrected the patch so that it applies without fuzz (https://build.opensuse.org/package/show/home:pascom/plasma6-desktop) and I downloaded the RPM (https://download.opensuse.org/repositories/home:/pascom/openSUSE_Tumbleweed/x86_64/plasma6-desktop-6.5.3-91.1.x86_64.rpm). I then extracted /usr/lib64/qt6/qml/org/kde/private/desktopcontainment/folder/libfolderplugin.so from the RPM and moved it in the place of the official one.
Thanks for the patch! Hope it will come soon through official channels!
Comment 21 Błażej Szczygieł 2025-12-02 22:01:28 UTC
(In reply to Pascal COMBES from comment #20)
> First the icon appear in the bad position and after one or two tenths of second, they go in the right position.

Yes, because plasma-workspace (since https://bugs.kde.org/show_bug.cgi?id=511131) initializes the containment for the screen without icons (in your case) as first, so icons go there temporarily, next plasma-workspace initializes another containment for another screen, so icons are moved to their correct position. The patch fixed few scenarios where user icon position were lost in multi-screen scenario.

Thanks for your feedback!
Comment 22 Bug Janitor Service 2025-12-05 09:50:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3367
Comment 23 Akseli Lahtinen 2025-12-05 10:58:07 UTC
Git commit b7b492564f2d5a0229cee7b1504c616604816b25 by Akseli Lahtinen.
Committed on 05/12/2025 at 10:58.
Pushed by akselmo into branch 'Plasma/6.5'.

🍒 Cherrypick fix for desktop icons moving to other monitor on plasmashell startup

**ScreenMapper: fix icon placement on multiple containments**

Move icons to disabled screens when screen doesn't exist. The screen
is most likely not yet initialized when Plasma is loading, so do the
same logic as when removing screen to preserve icon layout.

Change screen mapping when swapping screens.

Remove consistency map, because it disallows to place all icons on
screen with number different than 0.

(cherry-picked from commit c503531a9ceb2ae6af2cd6fca4c50c371ede0ffb )

**foldermodeltest: Add tst_initializeOnCorrectScreens**

This test checks that we initialize items on correct screens even
if all the screens are not available at initialization:
This can happen when some folderModels are started up before
after screenMapping is loaded.

When disabled screen comes back on, check that we move the items there.

(cherry-picked from commit 3218c5a71cfb233bf414dc36b5647fc180d8af5f )

M  +40   -0    containments/desktop/plugins/folder/autotests/foldermodeltest.cpp
M  +1    -0    containments/desktop/plugins/folder/autotests/foldermodeltest.h
M  +9    -2    containments/desktop/plugins/folder/foldermodel.cpp
M  +6    -1    containments/desktop/plugins/folder/foldermodel.h
M  +61   -11   containments/desktop/plugins/folder/screenmapper.cpp
M  +8    -0    containments/desktop/plugins/folder/screenmapper.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/b7b492564f2d5a0229cee7b1504c616604816b25
Comment 24 Akseli Lahtinen 2025-12-08 11:40:30 UTC
*** Bug 513052 has been marked as a duplicate of this bug. ***
Comment 25 felix 2025-12-09 21:06:53 UTC
Plasma 6.5.4 appears to have solved the issue
Comment 26 rex 2025-12-09 21:45:54 UTC
(In reply to felix from comment #25)
> Plasma 6.5.4 appears to have solved the issue

Not really, i'm using that version with CachyOS and same same.
Comment 27 rex 2025-12-10 07:46:02 UTC
Let me take that back, tried 2 restarts now and it seems to be fixed so yes you were right @felx.
If it breaks again i will post.
Comment 28 Andrew 2025-12-10 09:59:06 UTC
For me it's fixed since KDE 6.5.4. Thanks!
Comment 29 Jesse 2025-12-11 14:34:58 UTC
I've updated to 6.5.4 and restarted several times but I am still having the issue. Is there something else I should be doing? I've tried with desktop icons locked and unlocked.
Comment 30 Nate Graham 2025-12-12 19:47:44 UTC
It's likely you're actually experiencing a subtly different bug. Can you open a new report about it? Thanks!
Comment 31 Gurenko Alex 2025-12-12 23:08:35 UTC
6.5.4 reached Fedora testing today and it's fixed for me with 2nd USB-C Monitor (icons were constantly moving to another screen on power on)