containments/desktop/plugins/folder/foldermodel.h
@@ -123,6 +123,11 @@ public:
     };
     Q_ENUM(Status)
 
+    enum class SetScreenActions {
+        None,
+        MoveIcons
+    };
+
     explicit FolderModel(QObject *parent = nullptr);
     ~FolderModel() override;
 
@@ -251,7 +256,7 @@ public:
 
     bool screenUsed();
 
-    void setScreen(int screen);
+    void setScreen(int screen, SetScreenActions screenActions = SetScreenActions::None);
 
 #ifdef BUILD_TESTING
     void setScreenResolution(const QSizeF &size);
